# exhaustive-gc

./: .gitignore  CMakeLists.txt  README.md  flow.sh  main.cpp  update.sh
api/: CMakeLists.txt
api/include/exhaustive-gc/api/: api.h  api.hpp
api/include/exhaustive-gc/api/model/: SearchParameters.h
api/include/exhaustive-gc/api/utils/: FilterSeedPairs.h  GenerateSeedPairs.h  ImageFromCurve.h  InitImage.h
api/src/: api.cpp
api/src/utils/: FilterSeedPairs.cpp  GenerateSeedPairs.cpp  ImageFromCurve.cpp  InitImage.cpp
app/: CMakeLists.txt
app/flow/: CMakeLists.txt  flow.cpp
app/flow/include/: EnergyValue.h  InputData.h  InputReader.h  Shape.h  utils.h  utils.hpp
app/flow/src/: InputReader.cpp  utils.cpp
app/select-fixed-points/: CMakeLists.txt  select-fixed-points.cpp
app/select-fixed-points/app/: CMakeLists.txt  select-fixed-points.cpp
app/select-fixed-points/include/select-fixed-points/: GUIControl.h  events.h  gui.h  utils.h
app/select-fixed-points/src/: events.cpp  gui.cpp  utils.cpp
app/set-endpoints-orientation/: CMakeLists.txt
app/set-endpoints-orientation/app/: CMakeLists.txt  app-set-endpoints-orientation.cpp
app/set-endpoints-orientation/include/set-endpoints-orientation/: GUIControl.h  events.h  gui.h  utils.h
app/set-endpoints-orientation/src/: events.cpp  gui.cpp  utils.cpp
app/summary-curve/: CMakeLists.txt  summary-curve.cpp
app/summary-curve/include/summary-curve/: InputData.h  InputReader.h  OneImageFlow.h  types.h  utils.h
app/summary-curve/src/: InputReader.cpp  OneImageFlow.cpp  utils.cpp
dev/: CMakeLists.txt
dev/include/exhaustive-gc/check-elem/: CheckableSeedPair.h
dev/include/exhaustive-gc/checker/: MinimumDistanceChecker.h
dev/include/exhaustive-gc/control/: CurveCandidatesGenerator.h  CurveCandidatesGenerator.hpp  CurveFromJoints.h
dev/include/exhaustive-gc/dev/check-elem/: CheckableSeedPair.h
dev/include/exhaustive-gc/dev/checker/: GluedIntersectionChecker.h  IntervalChecker.h  MinimumDistanceChecker.h
dev/include/exhaustive-gc/dev/control/: CurveCandidatesGenerator.h  CurveFromJoints.h
dev/include/exhaustive-gc/dev/model/: EnergyType.h
dev/include/exhaustive-gc/dev/utils/: SeparateInnerAndOuter.h
dev/include/exhaustive-gc/model/: ContainerCombinator.h  GCInitData.h
dev/include/exhaustive-gc/utils/: SeparateInnerAndOuter.h
dev/src/control/: CurveFromJoints.cpp
dev/src/utils/: SeparateInnerAndOuter.cpp
examples/: CMakeLists.txt  FourJointOptimalCurve.cpp  OneExpansionFlow.cpp  TwoJointOptimalCurve.cpp
examples/fourJoint/: CMakeLists.txt  FourJointOptimalCurve.cpp
examples/oneExpansionFlow/: CMakeLists.txt  OneExpansionFlow.cpp
examples/twoJoint/: CMakeLists.txt  TwoJointOptimalCurve.cpp
ext-projects/: ExtProjects.cmake
ext-projects/cmake-files/: DIPaCUS.cmake  GCurve.cmake  GEOC.cmake  lazy-combinator.cmake  magLac.cmake
include/exhaustive-gc/check-elem/: CheckableSeedPair.h
include/exhaustive-gc/checker/: GluedIntersectionChecker.h  IntervalChecker.h
include/exhaustive-gc/control/: CombinationsEvaluator.h
include/exhaustive-gc/model/: ContainerCombinator.h  GCInitData.h
include/exhaustive-gc/utils/: SeparateInnerAndOuter.h
lab/examples/fourJoint/: CMakeLists.txt  FourJointOptimalCurve.cpp
lab/examples/oneExpansionFlow/: CMakeLists.txt  OneExpansionFlow.cpp
lab/examples/twoJoint/: CMakeLists.txt  TwoJointOptimalCurve.cpp
lab/exp/flow/: experiment.py  experiment.sh  graph-plot.sh  summary-flow.sh
lab/exp/flow/instance-generator/: config.py  generator.py
lab/exp/flow/plot-scripts/: graph-plot.sh  shape-estimator-bars.sh  shape-estimator.sh  shape-grid.sh
local/scripts/: flow.sh
modules/api/: CMakeLists.txt
modules/api/include/exhaustive-gc/api/: api.h  api.hpp
modules/api/include/exhaustive-gc/api/model/: SearchParameters.h
modules/api/include/exhaustive-gc/api/utils/: FilterSeedPairs.h  GenerateSeedPairs.h  InitImage.h
modules/api/src/utils/: FilterSeedPairs.cpp  GenerateSeedPairs.cpp  InitImage.cpp
modules/core/: CMakeLists.txt
modules/core/include/exhaustive-gc/core/check-elem/: CCheckableElement.h  CheckableSeedPair.h
modules/core/include/exhaustive-gc/core/checker/: GluedIntersectionChecker.h  IMarkedMapChecker.h  IntervalChecker.h  MinimumDistanceChecker.h
modules/core/include/exhaustive-gc/core/control/: CurveCandidatesGenerator.h  CurveCandidatesGenerator.hpp  CurveFromJoints.h  FindCandidate.h
modules/core/include/exhaustive-gc/core/model/: CCGData.h  ContainerCombinator.h  Types.h
modules/core/include/exhaustive-gc/core/utils/: SeparateInnerAndOuter.h
modules/core/src/control/: CurveFromJoints.cpp  FindCandidate.cpp
modules/core/src/utils/: SeparateInnerAndOuter.cpp
modules/dev/: CMakeLists.txt  main.cpp
modules/energy/: CMakeLists.txt
modules/energy/include/exhaustive-gc/energy/: BaseMap.h  EnergyInput.h  EnergyType.h  energy.h
modules/energy/src/: BaseMap.cpp  energy.cpp
modules/utils/: CMakeLists.txt
modules/utils/include/exhaustive-gc/utils/: digital.h  string.h  timer.h
modules/utils/src/: digital.cpp  string.cpp  timer.cpp
